<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="10" >

    <TextView
        android:id="@+id/statusTitle"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_title_height"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="0"
        android:background="@drawable/dark_gradient"
        android:gravity="center"
        android:text="@string/dlg_format_hdr"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_column="0"
        android:layout_row="1"
        android:padding="@dimen/content_page_title_horizontal_padding"
        android:text="@string/format_text_size_hdr"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="3"
        android:padding="@dimen/content_page_title_horizontal_padding"
        android:text="@string/format_line_spacing_hdr"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_column="0"
        android:layout_row="7"
        android:padding="@dimen/content_page_title_horizontal_padding"
        android:text="@string/format_text_example" />

    <TextView
        android:id="@+id/statusText"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="5"
        android:padding="@dimen/content_page_title_horizontal_padding"
        android:text="@string/format_font_face_heading"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="Times"
            android:text="@string/format_face_times"
            android:typeface="serif" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Helvetica"
            android:text="@string/format_face_arial" />

    </RadioGroup>

</GridLayout>